# EECE4632

HW3/.wsdata/: clang_dir_map.json
HW3/HLS/.wsdata/: clang_dir_map.json
HW3/HLS/divisible/: compile_commands.json  divisible.cpp  hls_config.cfg  vitis-comp.json
HW3/HLS/divisible/divisible/: divisible.hlscompile_summary  divisible.hlsrun_package_summary
HW3/HLS/divisible/divisible/hls/: config.cmdline  hls_data.json
HW3/HLS/divisible/divisible/reports/: v++_compile_divisible_guidance.html
HW3/Submit/: Langweil-divisible.py
HW3/Vivado/divisible/: divisible.hwh  divisible.tcl  divisible.xpr
HW3/Vivado/divisible/divisible.cache/wt/: synthesis.wdf
HW3/Vivado/divisible/divisible.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml
HW4/: Homework4.py.txt  Q4.txt
HW4/HLS/.wsdata/: clang_dir_map.json
HW4/HLS/divide_by_13/: compile_commands.json  divide_by_13_tb.cpp  hls_config.cfg  vitis-comp.json
HW4/HLS/divide_by_13/stream/: stream.hlscompile_summary  stream.hlsrun_package_summary
HW4/HLS/hls_component/: hls_config.cfg
HW4/Vivado/divide_by_13/: axi_stream_base_design.tcl  divisible_stream.hwh  stream.xpr
HW5/HLS/.wsdata/: clang_dir_map.json
HW5/HLS/divide_by_13/: compile_commands.json  divide_by_13.h  divide_tb.cpp  hls_config.cfg  vitis-comp.json
HW5/HLS/divide_by_13/divide_by_13/: divide_by_13.hlscompile_summary  divide_by_13.hlsrun_csim_summary  divide_by_13.hlsrun_package_summary
HW5/HLS/divide_by_13/divide_by_13/hls/impl/misc/drivers/divide_by_13_v1_0/src/: CMakeLists.txt  xdivide_by_13_hw.h
HW5/Submit/: divide_by_13.cpp
HW6/Designs/: Baseline.txt  UNROLL.txt  int.txt  loop-flatten.txt  loop-merge.txt  part-pipe-int.txt  part-pipe.txt  part.txt
HW6/HLS/.wsdata/: clang_dir_map.json
HW6/HLS/matrix-mult/: compile_commands.json  hls_config.cfg  mmult_baseline.cpp  mmult_baseline.h  mmult_tb.cpp  vitis-comp.json
HW6/HLS/matrix-mult/matrix-mult/: matrix-mult.hlscompile_summary  matrix-mult.hlsrun_csim_summary
HW6/HLS/matrix-mult/matrix-mult/hls/.autopilot/db/driver/src/: CMakeLists.txt  xmmult_hw.c  xmmult_hw_hw.h
Lab2/HLS/: #define XADD_CONTROL_ADDR_A_DATA 0x.txt
Lab2/HLS/.wsdata/: clang_dir_map.json
Lab2/HLS/adder/: adder.cpp  compile_commands.json
Lab2/HLS/adder/adder/: adder.hlscompile_summary  adder.hlsrun_package_summary
Lab2/Vivado/Lab2/: Lab2.xpr  adder.hwh  adder.tcl
Lab3/HLS/.wsdata/: clang_dir_map.json
Lab3/HLS/logs/: builder.py  builder_2800.py
Lab3/HLS/stream/: compile_commands.json  hls_config.cfg
Lab3/HLS/stream/stream/: stream.hlscompile_summary  stream.hlsrun_package_summary
Lab3/Vivado/stream/: stream.xpr
(+1349 files in other folders)
